feat: Support for Trinkets and Baubles mod. This also fundamentally changes EBWizardry, as mana is now provided from the player's mana bar through the T&B mod.

--- a/gradle.properties
+++ b/gradle.properties
@@ -17,13 +17,13 @@
 # Publishing
     github=WinDanesz/SpellBundle
     curse_project_id=559525
-    curse_relations =electroblobs-wizardry:requiredDependency,antique-atlas:optionalDependency,baubles:optionalDependency,jei:optionalDependency,waystones:optionalDependency,treasure2:optionalDependency,pointer:optionalDependency,mixin-booter:optionalDependency,autoreglib:optionalDependency,quark:optionalDependency
+    curse_relations =electroblobs-wizardry:requiredDependency,antique-atlas:optionalDependency,baubles:optionalDependency,jei:optionalDependency,waystones:optionalDependency,treasure2:optionalDependency,pointer:optionalDependency,mixin-booter:optionalDependency,autoreglib:optionalDependency,quark:optionalDependency,trinkets-and-baubles:optionalDependency
     curse_versions=Java 8,Forge,Minecraft 1.12:1.12.2
     hook_content=<@&658183075255025664>
 # Dependencies
     wizardry_projectid=265642
-    wizardry_version=4.3.12
-    wizardry_fileid=4995134
+    wizardry_version=4.3.13
+    wizardry_fileid=5216846
     baubles_projectid=227083
     baubles_version=1.5.2
     baubles_fileid=2518667
@@ -62,6 +62,11 @@
     ichunutil_projectid=229060
     ichunutil_fileid=2801262
     ichunutil_version=7.2.2
+    trinkletsandbaubles_projectid=279900
+    trinkletsandbaubles_fileid=4469269
+    trinkletsandbaubles_version=0.32.4
+    reskillable_projectid=286382
+    reskillable_fileid=2815686
     # mixinbooter is required by pointer
 # Gradle
     org.gradle.jvmargs=-Xmx3G
